Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,6 +1,68 @@
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
+
+  <title>A Game Developer&#39;s Diary</title>
+  <meta name="description" content="Sanjay Nambiar">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
 <body>
-<h3> Sanjay Nambiar </h3>
-My game development portfolio website
-<body/>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">A Game Developer&#39;s Diary</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Sanjay Nambiar</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/sanjay-nambiar" class="code">View A Game Developer&#39;s Diary on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
+<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome</h3>
+
+<p>Welcome to the initiation</p>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
+
+<p><a href="mailto:sanjay.mnambiar@gmail.com">sanjay.mnambiar@gmail.com</a></p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
+
+      <p><a href="https://github.com/sanjay-nambiar" class="avatar"><img src="https://avatars1.githubusercontent.com/u/693297?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/sanjay-nambiar">sanjay-nambiar</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/sanjay-nambiar/sanjay-nambiar.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/sanjay-nambiar/sanjay-nambiar.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
