--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
+  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_about();">{{ site.about_btn }}</a>
   <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>
   <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
 </div>
+
+<div id="about">
+
+  <h2 class="my-mini-heading">{{ site.about_btn }}</h2>
+  <ul>
+    <li>
+      {% include_relative pages/about.html %}
+    </li>
+  </ul>
+
+  <div>
+    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+  </div>
+</div>
+
 <div id="posts">
 
   <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
@@ -85,3 +101,10 @@ layout: default
     </ul>
   </div>
 </noscript>
+
+<script>
+  // A $( document ).ready() block.
+  $( document ).ready(function() {
+      show_about();
+  });
+</script>
