--- a/pages/imprint.html
+++ b/pages/imprint.html
@@ -17,16 +17,17 @@ layout: page
                 <p class="my-item">&copy; 2016 Sanjay Nambiar<br>
                     <span class="my-item-sub">Copyright</span></p>
             </li>
+
             <li>
-                <p class="my-item"><a class="my-link" href="https://www.google.com/analytics/terms/en.html">Google Analytics</a><br>
-                    <span class="my-item-sub">Disclaimer</span></p>
+                <p class="my-item">Google Analytics<br>
+                    <a href="{{ "/pages/disclaimer.html" | prepend: site.baseurl }}" class="my-link">Disclaimer</a><br>
+                </p>
             </li>
+
             <li>
-                <p class="my-item"><a class="my-link" href="https://www.google.com/analytics/terms/en.html">Favicon</a><br>
+                <p class="my-item">Favicon<br>
                     <span class="my-item-sub">
-                        <div>
-                            Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
-                        </div>
+                        Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
                     </span>
                 </p>
             </li>            
