--- a/index.html
+++ b/index.html
@@ -3,29 +3,19 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
-  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_about();">{{ site.about_btn }}</a>
-  <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_posts();">{{ site.posts_btn }}</a>
-  <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="show_projects();">{{ site.projects_btn }}</a>
+  <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="GameDevDiary.show_section('posts');">{{ site.posts_btn }}</a>
+  <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="GameDevDiary.show_section('projects');">{{ site.projects_btn }}</a>
+  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="GameDevDiary.show_section('about');">{{ site.about_btn }}</a>
 </div>
 
-<div id="about">
 
-  <h2 class="my-mini-heading">{{ site.about_btn }}</h2>
-  <ul>
-    <li>
-      {% include_relative pages/about.html %}
-    </li>
-  </ul>
-
-  <div>
-    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
-  </div>
+<div id="cool-stuff">
+  <img src="images/desert-intro.png">
 </div>
+
 
 <div id="posts">
-
   <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
-
   <ul>
     {% for post in site.posts %}
     <li>
@@ -44,7 +34,7 @@ layout: default
   </ul>
 
   <div>
-    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+    <a onclick="GameDevDiary.show_section('cool-stuff');" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
   </div>
 </div>
 
@@ -61,9 +51,24 @@ layout: default
     {% endfor %}
   </ul>
   <div>
-    <a onclick="hide_lists();" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+    <a onclick="GameDevDiary.show_section('cool-stuff');" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
   </div>
 </div>
+
+
+<div id="about" style="display: none">
+  <h2 class="my-mini-heading">{{ site.about_btn }}</h2>
+  <ul>
+    <li>
+      {% include_relative pages/about.html %}
+    </li>
+  </ul>
+
+  <div>
+    <a onclick="GameDevDiary.show_section('cool-stuff');" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
+  </div>
+</div>
+
 
 <noscript>
   <div id="posts-noscript">
@@ -101,10 +106,3 @@ layout: default
     </ul>
   </div>
 </noscript>
-
-<script>
-  // A $( document ).ready() block.
-  $( document ).ready(function() {
-      show_about();
-  });
-</script>
