Setting header buttons padding relative

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
-  <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="GameDevDiary.show_section('posts');">{{ site.posts_btn }}</a>
-  <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="GameDevDiary.show_section('projects');">{{ site.projects_btn }}</a>
-  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large" onclick="GameDevDiary.show_section('about');">{{ site.about_btn }}</a>
+  <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large button-bounds" onclick="GameDevDiary.show_section('posts');">{{ site.posts_btn }}</a>
+  <a id="projects-btn" class="waves-effect waves-teal btn-flat btn-large button-bounds" onclick="GameDevDiary.show_section('projects');">{{ site.projects_btn }}</a>
+  <a id="about-btn" class="waves-effect waves-teal btn-flat btn-large button-bounds" onclick="GameDevDiary.show_section('about');">{{ site.about_btn }}</a>
 </div>
 
 
