--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
 ---
 layout: default
 ---
+
+{% comment %}
+=======================
+The following part extracts all the tags from your posts and sort tags, so that you do not need to manually collect your tags to a place.
+=======================
+{% endcomment %}
+{% assign rawtags = "" %}
+{% for post in site.posts %}
+  {% assign ttags = post.tags | join:'|' | append:'|' %}
+  {% assign rawtags = rawtags | append:ttags %}
+{% endfor %}
+{% assign rawtags = rawtags | split:'|' | sort %}
+
+{% comment %}
+=======================
+The following part removes dulpicated tags and invalid tags like blank tag.
+=======================
+{% endcomment %}
+{% assign tags = "" %}
+{% for tag in rawtags %}
+  {% if tag != "" %}
+    {% if tags == "" %}
+      {% assign tags = tag | split:'|' %}
+    {% endif %}
+    {% unless tags contains tag %}
+      {% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
+    {% endunless %}
+  {% endif %}
+{% endfor %}
+
+
 <script src="{{ "/styles/index.js" | prepend: site.baseurl }}"></script>
 <div>
   <a id="posts-btn" class="waves-effect waves-teal btn-flat btn-large button-bounds" onclick="GameDevDiary.show_section('posts');">{{ site.posts_btn }}</a>
@@ -10,15 +41,22 @@ layout: default
 
 
 <div id="cool-stuff">
-  <img src="images/desert-intro.png">
+  <br/>
+  <img src="images/afterlife.png">
 </div>
 
 
 <div id="posts">
   <h2 class="my-mini-heading">{{ site.posts_btn }}</h2>
+  
   <ul>
     {% for post in site.posts %}
     <li>
+
+      {% if forloop.index == 4 %}
+        {% break %}
+      {% endif %}
+    
       <p class="my-item">
         <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
         <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
@@ -32,6 +70,13 @@ layout: default
         <i class="fa fa-rss" aria-hidden="true"></i> {{ site.rss_badge }}
     </li>
   </ul>
+
+  <div id="tags">
+    <h2 class="my-mini-heading">Tags</h2>
+    {% for tag in tags %}
+      <a href="/tag/{{ tag | slugify }}/index.html"> {{ tag }} </a>
+    {% endfor %}
+  </div>
 
   <div>
     <a onclick="GameDevDiary.show_section('cool-stuff');" class="waves-effect waves-teal btn-flat btn-large">{{ site.close_btn }}</a>
@@ -106,4 +151,3 @@ layout: default
     </ul>
   </div>
 </noscript>
-
