--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@ The following part removes dulpicated tags and invalid tags like blank tag.
   
   <ul>
     {% for post in site.posts %}
-    <li>    
-      <p class="my-item">
-        <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
-        <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
-          {{ post.content | strip_html | truncatewords: 20 }}
-      </p>
+    <li>
+      {% if forloop.index <= 3 %}
+        <p class="my-item">
+          <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
+          <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
+            {{ post.content | strip_html | truncatewords: 20 }}
+        </p>
+      {% endif %}
     </li>
     {% endfor %}
     <li>
