--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@ The following part removes dulpicated tags and invalid tags like blank tag.
           <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
             {{ post.content | strip_html | truncatewords: 20 }}
         </p>
+      {% else %}
+        <!--p class="my-item">
+          <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
+          <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
+            {{ post.content | strip_html | truncatewords: 20 }}
+        </p-->
       {% endif %}
     </li>
     {% endfor %}
