Updated project contents. Added post for The draft

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,12 +1,10 @@
 <br/>
 <img src="{{ "/images/headshot.jpg" | prepend: site.baseurl }}" width="150px" height="150px"/>
 <br/><br/>
-My name is Sanjay Nambiar. I'm a programmer and game developer. I am currently pursuing my Masters in Interactive Entertainment
+My name is Sanjay Nambiar. I'm a programmer and game developer currently pursuing my Masters in Interactive Entertainment
 at <a href="http://fiea.ucf.edu/">FIEA</a>, University of Central Florida. I have 5 years of software industry experience, having
-worked at Amazon and IBM Software Labs prior to my entry into games industry.
-
-Game programming was always my passion and now my full time activity. You can read about all of my projects and ideas here.
-
-<br/>
-<a href="{{ site.baseurl }}/download/Sanjay-Nambiar_Resume.pdf">Resume</a>
+worked at Amazon and IBM Software Labs prior to my entry into games industry. Game programming was always my passion and now my full
+time focus. You can find all about my projects here.
+<br/><br/>
+<a href="{{ site.baseurl }}/download/SanjayNambiar_Resume.pdf">Resume</a>
 <br/>
