--- a/pages/about.html
+++ b/pages/about.html
@@ -1,12 +1,14 @@
 <br/>
 <img src="{{ "/images/headshot.jpg" | prepend: site.baseurl }}" width="150px" height="150px"/>
 <br/><br/>
-My name is Sanjay Nambiar. I'm a game programmer currently working at [Iron Galaxy Studios](http://irongalaxystudios.com/).
+<div class="about-text">
+My name is Sanjay Nambiar. I'm a game programmer currently working at <a href="http://irongalaxystudios.com/">Iron Galaxy Studios</a>.
 <br/>
 I did my Masters in Interactive Entertainment at <a href="http://fiea.ucf.edu/">FIEA</a>, University of Central Florida.
 <br/>
 I have 5 years of software industry experience, and have worked at some great software companies such as Amazon and IBM Software Labs. Game programming was always my passion and now my full
 time focus.
-<br/><br/>
+</div>
+<br/>
 <a href="{{ site.baseurl }}/download/SanjayNambiar_Resume.pdf">Resume</a>
 <br/>
